--- a/index.html
+++ b/index.html
@@ -1,18 +1,222 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Amazing Dude</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reseter.css" />
-    <link rel="stylesheet" href="./style/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300;700&display=swap" rel="stylesheet">
-    <link rel="icon" href="./images/favicon.png" sizes="16x16" type="image/png" />
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="./style/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="icon"
+      href="./images/favicon.png"
+      sizes="16x16"
+      type="image/png"
+    />
+    <!-- Primary Meta Tags -->
+    <title>Amazing Dude - Amazing Life</title>
+    <meta name="title" content="Amazing Dude - Amazing Life" />
+    <meta
+      name="description"
+      content="Welcome to the personal site of John Doe.  A professional skier and a musicant. You can learn a lot about me here. See beautiful photos taken during my travels."
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://metatags.io/" />
+    <meta property="og:title" content="Amazing Dude - Amazing Life" />
+    <meta
+      property="og:description"
+      content="Welcome to the personal site of John Doe.  A professional skier and a musicant. You can learn a lot about me here. See beautiful photos taken during my travels."
+    />
+    <meta
+      property="og:image"
+      content="https://i.ibb.co/5k5LGJ1/background-1.png"
+    />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://metatags.io/" />
+    <meta property="twitter:title" content="Amazing Dude - Amazing Life" />
+    <meta
+      property="twitter:description"
+      content="Welcome to the personal site of John Doe.  A professional skier and a musicant. You can learn a lot about me here. See beautiful photos taken during my travels."
+    />
+    <meta
+      property="twitter:image"
+      content="https://i.ibb.co/5k5LGJ1/background-1.png"
+    />
+  </head>
+  <body id="main">
+    <header>
+      <div class="navigation">
+        <object data="./images/logo.svg" type="image/svg+xml"></object>
+        <nav id="mySidenav" class="sidenav">
+          <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
+            >&times;</a
+          >
+          <ul>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="#">Clients</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </nav>
+        <span style="font-size: 30px; cursor: pointer" onclick="openNav()"
+          >&#9776;</span
+        >
+      </div>
+      <div class="first-page">
+        <h1>Amazing Dude. Amazing Life.</h1>
+        <p>
+          Welcome to the personal site of <span>John Doe</span>. A professional
+          skier and a musician.
+        </p>
+      </div>
+    </header>
+    <main>
+      <section class="sed">
+        <div class="sed__photo">
+          <img src="./images/img_s2.png" alt="photo sed" />
+        </div>
+        <div class="sed__faucibus">
+          <h2>Sed faucibus quis</h2>
+          <p>
+            Fusce bibendum luctus massa, ut tincidunt lectus tincidunt in. Nulla
+            tristique ipsum vitae lacus ullamcorper, at dictum nunc scelerisque.
+          </p>
+        </div>
+      </section>
+      <section class="about">
+        <img src="./images/img1_s3.png" alt="#" />
+        <img src="./images/img2_s3.png" alt="#" />
+        <img src="./images/img3_s3.png" alt="#" />
+        <img src="./images/img4_s3.png" alt="#" />
+      </section>
+      <section class="instagram">
+        <div class="instagram__etiam">
+          <h2>INSTAGRAM</h2>
+          <p>
+            Etiam lacus dolor, tincidunt vitae nisi in, vulputate placerat odio.
+            Pellentesque iaculis.
+          </p>
+          <a href="#">VIEW ON INSTAGRAM</a>
+        </div>
+        <div class="instagram__img">
+          <img src="./images/img_s4.png" alt="#" />
+        </div>
+      </section>
+      <section class="self">
+        <div class="self__bbg"></div>
+        <div class="self__effacing">
+          <div class="self__effacing_rage">
+            <h3>Self-Effacing Rage</h3>
+            <h4>FT. Fascinating Collision</h4>
+            <p>
+              Director: James G. Rohrer Production Company: Sycamore Producer:
+              Laura S. Carlton Executive Producer: Jack M. Heckart
+            </p>
+            <a href="#">click to ► </a>
+          </div>
+        </div>
+      </section>
+      <section class="spotify">
+        <div class="spotify__follow">
+          <h2>SPOTIFY</h2>
+          <p>Follow me, stream and add my songs to your Spotify playlist.</p>
+          <a href="#">FOLLOW ON SPOTIFY</a>
+        </div>
+        <div class="spotify__itunes">
+          <h2>ITUNES</h2>
+          <p>Buy and download my songs from iTunes.</p>
+          <a href="#">buy from itunes</a>
+        </div>
+      </section>
+    </main>
+
+    <footer class="footer">
+      <div class="footer__dude">
+        <h3>AMAZING DUDE. AMAZING LIFE.</h3>
+        <p>
+          Mauris ornare lobortis arcu, at sodales dolor finibus nec. In
+          convallis risus ligula, bibendum sagittis ante cursus vitae. Donec
+          ornare,dui nec sagittis imperdiet, nunc eros dignissim augue, ut
+          aliquam nibh felis sit amet leo. Vivamus eu tincidunt tellus.
+          Vestibulum quis condimentum lectus, nec aliquet lectus. Duis
+          sollicitudin facilisis dui ac aliquet. Phasellus tempor sollicitudin
+          augue, id hendrerit enim gravida non. Integer consequat vel arcu quis
+          dictum. Vestibulum viverra commodo nunc eu pellentesque. Phasellus in
+          scelerisque elit, eu ultricies mauris.
+        </p>
+        <span>Ⓒ2015. all rights reserved.</span>
+      </div>
+      <div class="footer__contact">
+        <h3>CONTACT ME</h3>
+        <p>1242 Crestview Terrace Artesia Wells, TX 78001</p>
+        <p class="footer__contact_phone">
+          Phone: 830-676-7974 Email: <a href="#">halo@sitename.com</a>
+        </p>
+        <h3 class="footer__contact_follow">FOLLOW ME ON</h3>
+        <div class="footer__contact_media">
+          <a href="https://uk-ua.facebook.com/"
+            ><object data="./images/facebook.svg" type="image/svg+xml"></object
+            >FACEBOOK</a
+          >
+          <a href="https://twitter.com/?lang=uk"
+            ><object data="./images/twitter.svg" type="image/svg+xml"></object
+            >TWITTER</a
+          >
+          <a href="https://www.youtube.com/"
+            ><object data="./images/youtube.svg" type="image/svg+xml"></object
+            >YOUTYBE</a
+          >
+          <a href="https://www.pinterest.ru/"
+            ><object data="./images/dribble.svg" type="image/svg+xml"></object
+            >DRIBBLE</a
+          >
+        </div>
+      </div>
+      <div class="footer__subscribe">
+        <h3>SUBSCRIBE</h3>
+        <p>
+          Duis sollicitudin facilisis dui ac aliquet. Phasellus tempor
+          sollicitudin augue, id hendrerit enim gravida non. Integer consequat
+          vel arcu quis dictum. Ves- tibulum viverra commodo nunc eu
+          pellentesque.
+        </p>
+        <form action="#">
+          <input type="email" placeholder="ENTER YOUR EMAIL ADDRESS" />
+          <button type="submit">
+            <object data="./images/arrow.svg" type="image/svg+xml"></object>
+          </button>
+        </form>
+        <h3>Sponsor</h3>
+        <div class="footer__subscribe_logo">
+          <object data="./images/footer_logo.svg" type="image/svg+xml"></object>
+          <object data="./images/footer_logo.svg" type="image/svg+xml"></object>
+          <object data="./images/footer_logo.svg" type="image/svg+xml"></object>
+        </div>
+      </div>
+    </footer>
+
+    <script>
+      function openNav() {
+        document.getElementById("mySidenav").style.width = "250px";
+        document.getElementById("main").style.marginLeft = "250px";
+        document.getElementById("main").style.position = "relative";
+        document.getElementById("mySidenav").style.position = "absolute";
+      }
+
+      function closeNav() {
+        document.getElementById("mySidenav").style.width = "0";
+        document.getElementById("main").style.marginLeft = "0";
+      }
+    </script>
+  </body>
 </html>
